--- a/styles.css
+++ b/styles.css
@@ -237,7 +237,7 @@ dt {
 }
 
 .aboutMajorContainer {
-    background-image: url('images/IMG_6887.png');
+    background-image: url('images/IMG_6887.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
